--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 인터넷 권한 -->
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,15 +16,24 @@
         android:theme="@style/Theme.Dearlog"
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
+
+        <!-- 시작 액티비티 -->
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 메인 액티비티 -->
+        <activity android:name=".activity.MainActivity" />
+
+        <!-- 회원가입 액티비티 -->
+        <activity android:name=".activity.RegisterActivity" />
+
+
     </application>
 
 </manifest>
