--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <!-- 회원가입 액티비티 -->
         <activity android:name=".activity.RegisterActivity" />
-
+        <!-- 회원가입 액티비티 -->
+        <activity android:name=".activity.SettingsActivity" />
 
     </application>
 
