다이얼로그, 메인엑티비티연결
다이얼로그, 메인엑티비티연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,10 @@
 
         <!-- 메인 액티비티 -->
         <activity android:name=".activity.MainActivity" />
-
-        <!-- 회원가입 액티비티 -->
         <activity android:name=".activity.RegisterActivity" />
-        <!-- 회원가입 액티비티 -->
         <activity android:name=".activity.SettingsActivity" />
+        <activity android:name=".activity.WriteDiaryActivity" />
+        <activity android:name=".activity.EmotionSummaryActivity" />
 
     </application>
 
