페이지 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".activity.SettingsActivity" />
         <activity android:name=".activity.WriteDiaryActivity" />
         <activity android:name=".activity.EmotionSummaryActivity" />
-
+        <activity android:name=".activity.CalendarActivity" />
+        <activity android:name=".activity.DiaryActivity" />
     </application>
 
 </manifest>
